<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/hall_video_list_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/hello_world"
        android:textStyle="bold"
        android:layout_toRightOf="@+id/hall_video_list_item_img" />

    <TextView
        android:id="@+id/hall_video_list_item_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/black"
        android:layout_below="@+id/hall_video_list_item_title"
        android:text="@string/action_settings"
        android:layout_alignLeft="@+id/hall_video_list_item_title" />

    <ImageView
        android:id="@+id/hall_video_list_item_img"
        android:layout_width="120dp"
        android:layout_height="72dp"
        android:contentDescription="@string/video_list_item_img_description"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />
</RelativeLayout>