<?xml version="1.0" encoding="utf-8"?>
<!--list item in tab hall of main activity-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/tab_main_hall_list_item_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/video_list_item_img_description"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <TextView
        android:id="@+id/tab_main_hall_list_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="22sp"
        android:textColor="@color/simple_yellow"
        android:layout_toRightOf="@+id/tab_main_hall_list_item_img"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/tab_main_hall_list_item_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/primary_blue"
        android:layout_toRightOf="@+id/tab_main_hall_list_item_img"
        android:layout_below="@+id/tab_main_hall_list_item_title"
        android:text="@string/action_settings" />
</RelativeLayout>