<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_item_search"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="ifRoom|withText"
        android:title="@string/ui_menu_search">
    </item>
    <item
        android:id="@+id/menu_item_share"
        android:icon="@android:drawable/ic_menu_share"
        android:showAsAction="ifRoom|withText"
        android:title="@string/ui_menu_share">
    </item>
    <!--android:actionProviderClass="android.widget.ShareActionProvider"-->
    <item
        android:id="@+id/menu_item_show_qr_code"
        android:showAsAction="never"
        android:title="@string/ui_menu_show_qr_code">
    </item>
    <!--<item-->
        <!--android:id="@+id/menu_item_send"-->
        <!--android:showAsAction="never"-->
        <!--android:icon="@android:drawable/ic_menu_send"-->
        <!--android:title="@string/ui_menu_send">-->
    <!--</item>-->
    <!--<item-->
        <!--android:id="@+id/menu_item_feedback"-->
        <!--android:icon="@android:drawable/ic_menu_help"-->
        <!--android:title="@string/ui_menu_feedback"-->
        <!--android:showAsAction="never">-->
    <!--</item>-->
    <!--<item-->
        <!--android:id="@+id/menu_item_about"-->
        <!--android:icon="@android:drawable/ic_menu_info_details"-->
        <!--android:title="@string/ui_menu_about"-->
        <!--android:showAsAction="never">-->
    <!--</item>-->
    <!--<item-->
        <!--android:id="@+id/menu_item_quit"-->
        <!--android:icon="@android:drawable/ic_menu_close_clear_cancel"-->
        <!--android:showAsAction="never"-->
        <!--android:title="@string/ui_menu_quit">-->
    <!--</item>-->
</menu>
