<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/new_post_activity_vertical_margin"
    android:paddingLeft="@dimen/new_post_activity_horizontal_margin"
    android:paddingRight="@dimen/new_post_activity_horizontal_margin"
    android:paddingTop="@dimen/new_post_activity_vertical_margin"
    tools:context="com.kectech.android.kectechapp.activity.NewPostActivity">

    <ScrollView
        android:id="@+id/post_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:hint="@string/prompt_new_post_title"
                android:visibility="gone" />

            <EditText
                android:id="@+id/post_desc"
                android:layout_width="match_parent"
                android:layout_height="@dimen/new_post_text_height"
                android:layout_below="@+id/post_title"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_background_none"
                android:gravity="start"
                android:hint="@string/prompt_new_post_desc"
                android:padding="2dp"
                android:singleLine="true" />

            <LinearLayout
                android:id="@+id/post_img_layer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/post_desc"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <com.kectech.android.kectechapp.views.NewPostImageView
                    android:id="@+id/post_img1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_post_default_img"
                    android:background="@drawable/new_post_image_background_frame"
                    android:visibility="visible" />

                <com.kectech.android.kectechapp.views.NewPostImageView
                    android:id="@+id/post_img2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_post_default_img"
                    android:visibility="gone"
                    android:background="@drawable/new_post_image_background_frame"
                    tools:visibility="visible" />

                <com.kectech.android.kectechapp.views.NewPostImageView
                    android:id="@+id/post_img3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_post_default_img"
                    android:visibility="gone"
                    android:background="@drawable/new_post_image_background_frame"
                    tools:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/post_img_layer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/post_img_layer1"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <com.kectech.android.kectechapp.views.NewPostImageView
                    android:id="@+id/post_img4"
                    android:layout_width="@dimen/choose_image_grid_item_size"
                    android:layout_height="@dimen/choose_image_grid_item_size"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_post_default_img"
                    android:visibility="gone"
                    android:background="@drawable/new_post_image_background_frame"
                    tools:visibility="visible" />

                <com.kectech.android.kectechapp.views.NewPostImageView
                    android:id="@+id/post_img5"
                    android:layout_width="@dimen/choose_image_grid_item_size"
                    android:layout_height="@dimen/choose_image_grid_item_size"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_post_default_img"
                    android:visibility="gone"
                    android:background="@drawable/new_post_image_background_frame"
                    tools:visibility="visible" />

                <com.kectech.android.kectechapp.views.NewPostImageView
                    android:id="@+id/post_img6"
                    android:layout_width="@dimen/choose_image_grid_item_size"
                    android:layout_height="@dimen/choose_image_grid_item_size"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_post_default_img"
                    android:visibility="gone"
                    android:background="@drawable/new_post_image_background_frame"
                    tools:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/post_img_layer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/post_img_layer2"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <com.kectech.android.kectechapp.views.NewPostImageView
                    android:id="@+id/post_img7"
                    android:layout_width="@dimen/choose_image_grid_item_size"
                    android:layout_height="@dimen/choose_image_grid_item_size"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_post_default_img"
                    android:visibility="gone"
                    android:background="@drawable/new_post_image_background_frame"
                    tools:visibility="visible" />

                <com.kectech.android.kectechapp.views.NewPostImageView
                    android:id="@+id/post_img8"
                    android:layout_width="@dimen/choose_image_grid_item_size"
                    android:layout_height="@dimen/choose_image_grid_item_size"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_post_default_img"
                    android:visibility="gone"
                    android:background="@drawable/new_post_image_background_frame"
                    tools:visibility="visible" />

                <com.kectech.android.kectechapp.views.NewPostImageView
                    android:id="@+id/post_img9"
                    android:layout_width="@dimen/choose_image_grid_item_size"
                    android:layout_height="@dimen/choose_image_grid_item_size"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_post_default_img"
                    android:visibility="gone"
                    android:background="@drawable/new_post_image_background_frame"
                    tools:visibility="visible" />
            </LinearLayout>
            <!--<Button-->
            <!--android:id="@+id/post_submit"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->

            <!--android:layout_below="@+id/post_img_layer3"-->
            <!--android:background="@drawable/login_button"-->
            <!--android:text="@string/prompt_new_post_button_submit"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:layout_marginTop="20dp"/>-->

            <View
                android:id="@+id/post_separator"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_above="@+id/choose_img_done"
                android:layout_below="@+id/post_img_layer3"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/post_img_background"
                android:visibility="visible" />

            <TextView
                android:id="@+id/post_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/post_desc"
                android:layout_below="@+id/post_img_layer3"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/ui_menu_send"
                android:textColor="@color/tab_selected"
                android:textSize="16sp"
                android:textStyle="italic|bold" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>